--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -4,16 +4,7 @@
       <app-languages></app-languages>
     </div>
   </div>
-  <div class="row">
-    <div class="col-sm-4">
-      <app-user-form></app-user-form>
-    </div>
-    <div class="col-sm-8">
-      <app-main-info>
-        <ng-container>
-          <app-card-form></app-card-form>
-        </ng-container>
-      </app-main-info>
-    </div>
-  </div>
+
+  <router-outlet></router-outlet>
+
 </div>
