--- a/src/app/components/payment-processed/payment-processed.component.html
+++ b/src/app/components/payment-processed/payment-processed.component.html
@@ -1,3 +1,7 @@
-<p>
-  payment-processed works!
-</p>
+<div class="main">
+  <div class="payment-form-timeout">
+    <div class="message">
+      <p>{{content.paymentProceed}}</p>
+    </div>
+  </div>
+</div>
