--- a/src/app/components/forms-container/forms-container.component.html
+++ b/src/app/components/forms-container/forms-container.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-sm-4">
-    <app-user-form></app-user-form>
+    <app-user-form [form]="form"></app-user-form>
   </div>
   <div class="col-sm-8">
-    <app-main-info>
+    <app-main-info (save)="save()">
       <ng-container>
-        <app-card-form></app-card-form>
+        <app-card-form [form]="form"></app-card-form>
       </ng-container>
     </app-main-info>
   </div>
