--- a/src/app/components/languages/languages.component.css
+++ b/src/app/components/languages/languages.component.css
@@ -6,9 +6,14 @@
 }
 
 .lang {
-  color: #000;
+  color: #333;
+  font-size: 12px;
   margin: 10px;
   cursor: pointer;
+}
+
+.lang:hover {
+  color: #94a545;
 }
 
 .languages-block {
@@ -19,6 +24,8 @@
   z-index: 500;
   height: 50px;
   background-color: #eee;
-  border: 1px solid #cecece;
+  /*border: 1px solid #cecece;*/
+  width: 100%;
+  margin: 0!important;
 }
 
