--- a/src/app/components/languages/languages.component.html
+++ b/src/app/components/languages/languages.component.html
@@ -1,6 +1,6 @@
 <div class="position-relative">
   <img src="assets/img/language.svg" class="img-container" (click)="displayed = !displayed">
-  <div *ngIf="displayed" class="languages-block">
-    <span *ngFor="let lang of languages" (click)="changeLang(lang)" class="lang">{{lang.language}}</span>
+  <div *ngIf="displayed" class="languages-block row">
+    <span *ngFor="let lang of languages" (click)="changeLang(lang)" class="lang col-sm-1">{{lang.language}}</span>
   </div>
 </div>
